src/objects/FourPlanning_Esfera__c.object
<CustomObject>
    <fields>
        <fullName>Cuenta__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cuenta</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>FourPlanning Esferas</relationshipLabel>
        <relationshipName>FourPlanning_Esferas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Diametro__c</fullName>
        <label>No se utiliza</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Eje_x__c</fullName>
        <label>No se utiliza</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Eje_y__c</fullName>
        <label>No se utiliza</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>FourPlanning Esfera</label>
    <nameField>
        <label>Nombre de FourPlanning Esfera</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FourPlanning Esferas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>